--- a/Project/style/styleAllRecipe.css
+++ b/Project/style/styleAllRecipe.css
@@ -75,7 +75,7 @@ body {
 .box {
     width: auto;
     justify-content: space-between;
-    
+    align-items: center;
 }
 
 .boxFood {
@@ -101,13 +101,14 @@ body {
 
 .allbox {
     width: 80vw;
-    height: 70vh;
+    height: 650px;
     background-color: rgb(241 241 241);
     margin-top: 2%;
+    border-radius: 20px;
 }
 
 .boxRecipe {
-    width: 100%;
+    width: 99%;
     height: 100%;
     box-sizing: border-box;
     flex-direction: row;
@@ -115,15 +116,12 @@ body {
     overflow: hidden;
     overflow: auto;
     display: flex;
-    justify-content: space-around;
     border-radius: 20px;
 }
-
-
 .recipeReady {
-    width: 30%;
-    height: 13vw;
-    margin-top: 3%;
+    width: 450px;
+    height: 250px;
+    margin: 15px;
     border-radius: 30px;
     background-color: white;
 }
@@ -134,14 +132,14 @@ body {
 
 .recipeReady_descript {
     height: 100%;
-    width: 50%;
+    width: 58%;
     background: #ffffff;
     border-radius: 0px;
-    font-size: 0.8vw;
+    font-size: 14px;
     border-bottom-right-radius: 20px;
     border-top-right-radius: 20px;
     box-sizing: border-box;
-    padding-top: 2%;
+    padding-top: 15%;
     padding-left: 2%;
 }
 .recipeReady_descript.active {
@@ -150,7 +148,7 @@ body {
 }
 
 .recipeReady_img {
-    width: 15vw;
+    width: 10vw;
     height: 100%;
     border-bottom-left-radius: 20px;
     border-top-left-radius: 20px;
@@ -175,7 +173,7 @@ body {
     position: relative;
     background: #FFC052;
     border-radius: 6px;
-    width: 28%;
+    width: 20%;
     height: 100%;
 }
 .select select {
@@ -213,4 +211,75 @@ body {
     width: 10vw;
     height: 1vw;
     font-size: 1vw;
+}
+
+@media only screen and (max-width: 1700px) {
+    .recipeReady {
+        width: 380px;
+        height: 220px;
+    }
+}
+
+@media only screen and (max-width: 1565px) {
+    .recipeReady {
+        width: 355px;
+        height: 200px;
+    }
+}
+
+@media only screen and (max-width: 1470px) {
+    .recipeReady {
+        width: 330px;
+        height: 190px;
+    }
+    .recipeReady_descript {
+        font-size: 13px;
+    }
+}
+
+@media only screen and (max-width: 1380px) {
+    .recipeReady {
+        width: 300px;
+        height: 200px;
+    }
+    .recipeReady_descript {
+        font-size: 12px;
+    }
+    .allbox {
+        height: 650px;
+    }
+    .upeerText {
+        margin-top: 5%;
+    }
+}
+
+@media only screen and (max-width: 1265px) {
+    .recipeReady {
+        width: 280px;
+        height: 180px;
+    }
+    .recipeReady_descript {
+        font-size: 12px;
+        padding-top: 10%;
+    }
+}
+
+@media only screen and (max-width: 1175px) {
+    .recipeReady {
+        width: 260px;
+        height: 160px;
+    }
+    .recipeReady_descript {
+        font-size: 11px;
+    }
+}
+
+@media only screen and (max-width: 1100px) {
+    .recipeReady {
+        width: 240px;
+        height: 140px;
+    }
+    .recipeReady_descript {
+        font-size: 10px;
+    }
 }
