--- a/Project/style/addrecipe.css
+++ b/Project/style/addrecipe.css
@@ -469,6 +469,48 @@ body {
     border: none;
     z-index: 5;
 }
+
+.AdminButtonOk {
+    position: fixed;
+    bottom: 100px;
+    right:  20px;
+    color: white;
+    width: 18%;
+    background: #4dfa49;
+    border-radius: 50px;
+    margin: 0 auto;
+    margin-top: 27px;
+    height: 60px;
+    font-size: 22px;
+    text-align: center;
+    /* line-height: 30px; */
+    cursor: pointer;
+    text-shadow: 0px 1.33333px 4px rgb(0 0 0 / 25%);
+    border: none;
+    z-index: 5;
+}
+.AdminButtonNo {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    color: white;
+    width: 18%;
+    background: #ed3312;
+    border-radius: 50px;
+    margin: 0 auto;
+    margin-top: 27px;
+    height: 60px;
+    font-size: 22px;
+    text-align: center;
+    /* line-height: 30px; */
+    cursor: pointer;
+    text-shadow: 0px 1.33333px 4px rgb(0 0 0 / 25%);
+    border: none;
+    z-index: 5;
+}
+
+
+
 .indentStep {
     width: 100%;
     height: 30px;
