--- a/Project/style/styleAllRecipe.css
+++ b/Project/style/styleAllRecipe.css
@@ -124,6 +124,7 @@ body {
     margin: 15px;
     border-radius: 30px;
     background-color: white;
+    filter: drop-shadow(0px 0px 5px rgba(184, 175, 143, 0.5));
 }
 .recipeReady.active {
     background-color: rgb(255, 218, 169);
