--- a/Project/style/inventory.css
+++ b/Project/style/inventory.css
@@ -38,13 +38,35 @@ body {
 .error {
     width: 100vw;
     font-size: 29px;
-    color: #ea0000;
+    color: #7f7f7f;
     text-align: center;
     box-sizing: border-box;
     margin-top: 15vh;
-    font-weight: 500;
-    letter-spacing: 0.017em;
 }
+.btn {
+    background: #FFC700;
+    width: 100%;
+    font-size: 25px;
+    color: #FFFFFF;
+    border-radius: 100px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-style: normal;
+    text-align: center;
+    text-decoration: none;
+    padding-top: 5%;
+    padding-bottom: 5%;
+    box-sizing: border-box;
+    margin-top: 10%;
+    word-break: break-all;
+    box-shadow: 0px 4px 4px rgb(0 0 0 / 25%), inset 0px 4px 4px rgb(255 255 255 / 25%);
+}
+.blockAuth {
+    width: 30vw;
+    margin: auto;
+}
+
+
+
 .menuHeader {
     margin: 0 auto;
     margin-top: 0%;
