--- a/Project/style/addrecipe.css
+++ b/Project/style/addrecipe.css
@@ -668,11 +668,11 @@ footer {
     font-size: 12px;
 }
 .deleteStep {
-  position: absolute;
-    width: 4vw;
-    height: 4vw;
-    margin-top: 2%;
-    margin-left: 57%;
+    position: absolute;
+    width: 3vw;
+    height: 3vw;
+    margin-top: 30px;
+    margin-left: 57vw;
 }
 
 @media screen and (max-width: 1200px) {
